# jaspar

./: README.md  notes.md  prototyping.ipynb  setup.cfg  todo.md
src/jaspar/: __init__.py  actions.py  config.py  main.py  parser.py  types.py
tests/test_jaspar/: aux.py  test_module.py  test_parser.py  test_parsing.py
tests/test_jaspar/definitions/: __init__.py  basicsignatures.py  signatures.py  typedsignatures.py
tests/test_jaspar/definitions/configs/: decorators.py
tests/test_jaspar/definitions/mains/: mainmod1.py
tests/test_jaspar/definitions/modules/: __init__.py  defaultmod1.py  imported_fct.py  main_and_subcmds.py  main_simple.py  mainmod1.py  mulitpleCmds.py
