[metadata]
name = jaspar
version = 0.0.1
author = Remo Geissbuehler
author_email = remogeissbuhler@gmail.com
description = A package that allows for automatic command line argument parsing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remogeissbuehler/jaspar
project_urls =
    Bug Tracker = https://github.com/remogeissbuehler/jaspar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src